# AmericanDemocracySimulator

./: CMakeLists.txt  Dependency.h  WIP_on_master__df4c646_add_objects___.patch  main.cpp
Settings/: AnimationSettings.h  FontSettings.h  GamePlaySceneSettings.h  Setting.h
lib/: Game.h  GameObjects.h
lib/Animations/: Animation.cpp  Animation.h  Animations.h  BoomAnimation.cpp  BoomAnimation.h  DeadAnimation.cpp  DeadAnimation.h  GroundAnimation.cpp  GroundAnimation.h  PointAnimation.cpp  PointAnimation.h  PreviewAnimation.cpp  WaterAnimation.cpp  WaterAnimation.h
lib/Architect/: AbstractGameObject.h  Architect.h  GameObject.cpp  GameObject.h  HolderableObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
lib/Architect/Base/: AbstractColliderType.cpp  AbstractColliderType.h  AbstractGameObject.h  Base.h  Collider.cpp  Collider.h  Coroutine.cpp  Coroutine.h  DrawableHolder.cpp  GameObject.cpp  GameObject.h  IColliderCompare.cpp  IColliderCompare.h  RectangleCollider.cpp  SceneHolder.cpp  SceneHolder.h  SceneManager.cpp  SceneManager.h
lib/Architect/Base/Colliders/: CircleCollider.cpp  CircleCollider.h  RectangleCollider.cpp  RectangleCollider.h
lib/Architect/Holders/: DrawableHolder.h  Holders.h  SceneHolder.cpp  SceneHolder.h
lib/Architect/Objects/: Objects.h
lib/Architect/Objects/Animations/: Animation.cpp  Animation.h  Animations.h  GroundAnimation.h  WaterAnimation.h
lib/Architect/Objects/Colliders/: AbstractCollider.cpp  AbstractCollider.h  CircleCollider.h  Collider.cpp  Collider.h  Colliders.h  ICollider.cpp  ICollider.h  RectangleCollider.h
lib/Architect/Objects/GameObjects/: GameObjects.h  Ground.cpp  Ground.h  Ship.cpp  Ship.h  ShipDieAnimated.cpp  ShipDieAnimated.h  WaterPool.cpp  WaterPool.h
lib/Architect/Scenes/: GamePlayScene.cpp  GamePlayScene.h  Scene.cpp  Scene.h  Scenes.h
lib/Debugger/: Debugger.cpp  Debugger.h
lib/Holders/: DrawableHolder.cpp  DrawableHolder.h
lib/Objects/: Boom.cpp  Boom.h  DeadShip.cpp  DeadShip.h  Ground.cpp  Ground.h  Objects.h  Point.cpp  Point.h  Preview.cpp  Ship.cpp  Ship.h  ShipDieAnimated.cpp  ShipDieAnimated.h  WaterPool.cpp  WaterPool.h  fly.cpp
lib/SFML/SFML-2.6.1/include/SFML/System/: Clock.hpp
lib/Scenes/: GamePlayScene.cpp  GamePlayScene.h
lib/UI/: UI.h
textures/: button.ase  panel.ase
